[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Tileables/img_factory_inv_black_32x.png" type="Texture" id=1]
[ext_resource path="res://objFactoryTile.gd" type="Script" id=2]
[ext_resource path="res://Assets/Tileables/img_factorytile.png" type="Texture" id=3]
[ext_resource path="res://Assets/Misc/img_io_indicator.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[sub_resource type="CircleShape2D" id=3]
radius = 2.0

[node name="objFactoryTile" type="TouchScreenButton"]
shape = SubResource( 1 )
script = ExtResource( 2 )

[node name="areaTile" type="Area2D" parent="."]

[node name="shapeTile" type="CollisionShape2D" parent="areaTile"]
position = Vector2( 16, 16 )
shape = SubResource( 2 )

[node name="areaCenter" type="Area2D" parent="."]

[node name="shapeCenter" type="CollisionShape2D" parent="areaCenter"]
position = Vector2( 16, 16 )
shape = SubResource( 3 )

[node name="texTile" type="TextureRect" parent="."]
margin_right = 32.0
margin_bottom = 32.0
mouse_filter = 2
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texFill" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 128.0
margin_bottom = 128.0
rect_scale = Vector2( 0.25, 0.25 )
mouse_filter = 2
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ioIndicators" type="Node2D" parent="."]
z_index = 30
z_as_relative = false

[node name="sprU" type="Sprite" parent="ioIndicators"]
position = Vector2( 16, 2 )
rotation = -3.14159
texture = ExtResource( 4 )

[node name="sprR" type="Sprite" parent="ioIndicators"]
position = Vector2( 30, 16 )
rotation = -1.5708
texture = ExtResource( 4 )

[node name="sprD" type="Sprite" parent="ioIndicators"]
position = Vector2( 16, 30 )
texture = ExtResource( 4 )

[node name="sprL" type="Sprite" parent="ioIndicators"]
position = Vector2( 2, 16 )
rotation = 1.5708
texture = ExtResource( 4 )
[connection signal="pressed" from="." to="." method="_on_objFactoryTile_pressed"]
[connection signal="released" from="." to="." method="_on_objFactoryTile_released"]
[connection signal="mouse_entered" from="areaTile" to="." method="_on_areaTile_mouse_entered"]
[connection signal="mouse_exited" from="areaTile" to="." method="_on_areaTile_mouse_exited"]
